# snowball

art/wapen/: weapon.max  weapon.mb
art/wj/: wj001.max  wj001_skin.max
scheme/: GM指令说明.pptx  IOS提交流程.xlsx  IOS策划注意事项.docx  《炮弹堂》版本规划.xlsx  冰雪大作战特效.xlsx
scheme/2016年11月/: Alpha版主界面.pptx  Alpha版角色设计.xlsx  Demo版项目计划.xlsx  t_name.txt  地图逻辑格.xlsx  帐号相关.docx  角色资源整理.xlsx
scheme/2016年12月/: 商城界面.pptx  好友界面.pptx  好友系统.docx  战斗流程.pptx  技能量化表.xlsx  特殊状态表.xlsx  聊天界面.pptx  聊天系统.docx  角色定义.xlsx  账号资料.docx
scheme/2017年10月/: 版本更新公告.docx
scheme/2017年11月/: 世界观.docx  技能界面修改.pptx  排行榜.docx  版本更新公告.docx
scheme/2017年12月/: 关卡.xlsx  剧情界面.pptx  版本更新公告.docx  玩法调整方案.docx  组队界面.pptx
scheme/2017年1月/: 局内经验.xlsx  战斗界面.pptx  排行榜.docx  排行榜.pptx  英雄情报界面.pptx  道具通用.pptx  邮件界面.pptx  邮件系统.docx
scheme/2017年2月/: 分享系统.docx  奖励.xlsx  奖杯界面.pptx  宝箱参考图.pptx  成就界面.pptx  成就系统.docx  战斗数值.xlsm  通用提示.pptx  (+2 more)
soft/server/: Makefile.am  configure.ac  snowball.sln
soft/server/conf/: game.json  server.json
soft/server/config/: t_achievement_reward.txt  t_ai_attr.txt  t_ai_setting.txt  t_battle_buff.txt  t_battle_item_pos.txt  t_battle_msg.txt  t_chest_rate.txt  t_cup.txt  t_dungeon.txt  t_duobao_rate.txt  t_fashion.txt  t_guide_condition.txt  t_guide_init.txt  t_item.txt  t_monster.txt  t_rank_type.txt  t_resource.txt  t_role.txt  t_role_level.txt  t_scarf.txt  t_script_str.txt  t_sign.txt  t_skill.txt  t_skill_action.txt  t_skill_effect.txt  t_skill_xiaoguo.txt  t_talent.txt  t_toukuang.txt  t_ui_label.txt  t_vip_attr.txt
soft/server/src/center/: Makefile.am  center.cpp  center_manager.cpp  center_manager.h  center_message.cpp  center_message.h
soft/server/src/connect/: Makefile.am  connect.cpp  connect_manager.cpp  connect_manager.h  connect_message.cpp  connect_message.h
soft/server/src/gate/: Makefile.am  gate.cpp  gate_manager.cpp  gate_manager.h  gate_message.cpp  gate_message.h
soft/server/src/hall/: Makefile.am  chat_manager.cpp  chat_manager.h  chat_pool.cpp  chat_pool.h  hall.cpp  hall_dhc.cpp  hall_dhc.h  hall_manager.cpp  hall_manager.h  hall_message.cpp  hall_message.h  hall_pool.cpp  hall_pool.h  item_config.cpp  item_config.h  item_manager.cpp  item_manager.h  item_operation.cpp  item_operation.h  player_config.cpp  player_config.h  player_loader.cpp  player_loader.h  player_manager.cpp  player_manager.h  player_operation.cpp  player_operation.h  post_manager.cpp  post_manager.h  post_operation.cpp  post_operation.h  rank_config.cpp  rank_config.h  rank_manager.cpp  rank_manager.h  rank_operation.cpp  rank_operation.h  reward.cpp  reward.h  (+16 more)
soft/server/src/libprotocol/: Makefile.am  opcodes.h  protocol_inc.h
soft/server/src/libservice/: Makefile.am  dbc.cpp  dbc.h  dfa_algorith.cpp  dfa_algorith.h  dhc.cpp  dhc.h  gtool.cpp  gtool.h  leak.h  log.cpp  log.h  logic_service.cpp  logic_service.h  packet.cpp  packet.h  pool.cpp  pool.h  rpc.pb.cc  rpc.pb.h  rpc_client.cpp  rpc_client.h  rpc_server.cpp  rpc_server.h  rpc_service.cpp  rpc_service.h  scheme.cpp  scheme.h  server_env.cpp  server_env.h  service.cpp  service.h  service_inc.h  service_interface.h  sig.cpp  sig.h  singleton.h  tcp_handler.cpp  tcp_handler.h  tcp_service.cpp  (+14 more)
soft/server/src/login/: Makefile.am  login.cpp  login_dhc.cpp  login_dhc.h  login_manager.cpp  login_manager.h  login_message.cpp  login_message.h  sqlquery2.cpp  sqlquery2.h
soft/server/src/name/: Makefile.am  name.cpp  name_dhc.cpp  name_dhc.h  name_manager.cpp  name_manager.h  name_message.cpp  name_message.h  sqlquery2.cpp  sqlquery2.h
soft/server/src/rank/: Makefile.am  rank.cpp  rank_dhc.cpp  rank_dhc.h  rank_manager.cpp  rank_manager.h  rank_message.cpp  rank_message.h  sqlquery.cpp  sqlquery.h
soft/server/src/room/: Makefile.am  room.cpp  room_config.cpp  room_config.h  room_def.h  room_manager.cpp  room_manager.h  room_message.cpp  room_message.h  room_pool.cpp  room_pool.h
soft/server/src/room_center/: Makefile.am  mode_config.cpp  mode_config.h  room_center.cpp  room_center_dhc.cpp  room_center_dhc.h  room_center_manager.cpp  room_center_manager.h  room_center_message.cpp  room_center_message.h  room_center_operation.cpp  room_center_operation.h  sqlquery.cpp  sqlquery.h
soft/server/src/room_master/: Makefile.am  room_master.cpp  room_master_manager.cpp  room_master_manager.h  room_master_message.cpp  room_master_message.h
soft/server/src/social/: Makefile.am  social.cpp  social_dhc.cpp  social_dhc.h  social_manager.cpp  social_manager.h  social_message.cpp  social_message.h  social_operation.h  social_pool.cpp  social_pool.h  sqlquery.cpp  sqlquery.h  sqlquery2.cpp  sqlquery2.h
soft/server/src/team/: Makefile.am  team.cpp  team_manager.cpp  team_manager.h  team_message.cpp  team_message.h  team_operation.cpp  team_operation.h
soft/server/sub_server/clean_db/: clean_db.py
soft/server/sub_server/common/: msg_pipe_pb2.py  opcodes.py  packet.py  pull.py  read_config.py  rpc_pb2.py
soft/server/sub_server/libao_pipe/: config.py  libao_pipe.py
soft/server/sub_server/login_pipe/: config.py  login_pipe.py  snowball_user.sql
soft/server/sub_server/recharge_pipe/: config.py  dispatch.py  recharge_pipe.py
soft/server/sub_server/sync_name/: sync_name.py
soft/server/tools/create_db/: create_db.sln  create_db.vcxproj
soft/server/tools/create_db/src/: main.cpp
soft/server/tools/proto2sql/: proto2sql.sln  proto2sql.vcxproj
soft/server/tools/proto2sql/src/: main.cpp
soft/server/vsproject/center/: center.vcxproj
soft/server/vsproject/connect/: connect.vcxproj
soft/server/vsproject/gate/: gate.vcxproj
soft/server/vsproject/hall/: hall.vcxproj
soft/server/vsproject/libprotocol/: libprotocol.vcxproj
soft/server/vsproject/libservice/: libservice.vcxproj
soft/server/vsproject/login/: login.vcxproj
soft/server/vsproject/name/: name.vcxproj
soft/server/vsproject/rank/: rank.vcxproj
soft/server/vsproject/room/: room.vcxproj
soft/server/vsproject/room_center/: room_center.vcxproj
soft/server/vsproject/room_master/: room_master.vcxproj
soft/server/vsproject/social/: social.vcxproj
soft/server/vsproject/team/: team.vcxproj
(+2908 files in other folders)
