#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([snowball], [0.1], [rocketxyfb@163.com])
AM_INIT_AUTOMAKE(snowball, 0.1)
AC_CONFIG_SRCDIR([src/hall/hall.cpp])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([src/libprotocol/Makefile src/libservice/Makefile src/center/Makefile src/connect/Makefile src/gate/Makefile src/hall/Makefile src/login/Makefile src/room/Makefile src/room_center/Makefile src/room_master/Makefile src/team/Makefile src/social/Makefile src/name/Makefile src/rank/Makefile]) 



# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_RANLIB

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CONFIG_FILES([Makefile])

AC_OUTPUT
