noinst_LIBRARIES = libprotocol.a
libprotocol_a_SOURCES =     \
    ../../../common/protocpp/acc.pb.cc            \
    ../../../common/protocpp/battle_his.pb.cc     \
    ../../../common/protocpp/battle_result.pb.cc  \
    ../../../common/protocpp/gtool.pb.cc          \
    ../../../common/protocpp/msg_battle.pb.cc     \
    ../../../common/protocpp/msg_battle1.pb.cc    \
    ../../../common/protocpp/msg_connect.pb.cc    \
    ../../../common/protocpp/msg_hall.pb.cc       \
    ../../../common/protocpp/msg_hall1.pb.cc      \
    ../../../common/protocpp/msg_login.pb.cc      \
    ../../../common/protocpp/msg_name.pb.cc       \
    ../../../common/protocpp/msg_pipe.pb.cc       \
    ../../../common/protocpp/msg_social.pb.cc     \
    ../../../common/protocpp/msg_team.pb.cc       \
    ../../../common/protocpp/name.pb.cc           \
    ../../../common/protocpp/player.pb.cc         \
    ../../../common/protocpp/post.pb.cc           \
    ../../../common/protocpp/post_new.pb.cc       \
    ../../../common/protocpp/recharge.pb.cc       \
    ../../../common/protocpp/role.pb.cc           \
    ../../../common/protocpp/share.pb.cc          \
    ../../../common/protocpp/social.pb.cc         \
    ../../../common/protocpp/social_list.pb.cc    \
    ../../../common/protocpp/rank.pb.cc           \
    ../../../common/protocpp/msg_rank.pb.cc

INCLUDES = -I/usr/local/include
