noinst_LIBRARIES = libservice.a
libservice_a_SOURCES =      \
    dbc.cpp             \
    dfa_algorith.cpp    \
    dhc.cpp             \
    gtool.cpp           \
    log.cpp             \
    logic_service.cpp   \
    packet.cpp          \
    pool.cpp            \
    rpc.pb.cc           \
    rpc_client.cpp      \
    rpc_server.cpp      \
    rpc_service.cpp     \
    scheme.cpp          \
    server_env.cpp      \
    service.cpp         \
    sig.cpp             \
	tpacket.cpp         \
    tcp_handler.cpp     \
    tcp_service.cpp     \
    udp_handler.cpp     \
    udp_service.cpp     \
    timer.cpp           \
    utils.cpp           \
    windumper.cpp

INCLUDES = -I/usr/local/include -I/usr/local/include/mysql++ -I/usr/include/mysql -I/usr/local/include/raknet
